--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 .App {
   text-align: center;
+  
+  
+
 }
 
+body{
+  background-image: url("16240205_rm314-adj-13.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
